--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ Makefile*
 *.prl
 *.app
 moc_*.cpp
+moc_predefs.h
 ui_*.h
 qrc_*.cpp
 Thumbs.db
@@ -34,6 +35,7 @@ Thumbs.db
 *.rc
 /.qmake.cache
 /.qmake.stash
+src/ptcollab
 
 # qtcreator generated files
 *.pro.user*
