--- a/res/ptcollab.desktop
+++ b/res/ptcollab.desktop
@@ -4,4 +4,6 @@ Name=pxtone collab
 Comment=pxtone collab: multiplayer music editor
 Exec=ptcollab
 Icon=ptcollab
-Categories=Audio;AudioVideo;
+Categories=Audio;AudioVideo;AudioVideoEditing;
+Keywords=music;chiptune;pxtone;
+Terminal=false
