add dynamic coloring for custom icons

--- a/src/styles/ptCollage/palette.ini
+++ b/src/styles/ptCollage/palette.ini
@@ -1,12 +1,12 @@
 [palette]
-Window=#4e4b61
-WindowText=#ded9bb
-Base=#4e4b61
-ToolTipBase=#4e4b61
-ToolTipText=#ded9bb
-Text=#ded9bb
-Button=#4e4b61
-ButtonText=#ded9bb
+Window=#4E4B61
+WindowText=#D2CA9C
+Base=#4E4B61
+ToolTipBase=#4E4B61
+ToolTipText=#D2CA9C
+Text=#D2CA9C
+Button=#4E4B61
+ButtonText=#D2CA9C
 BrightText=#ff0000
 Link=#9d9784
 Highlight=#9d9784
