update ptCollage style

--- a/src/styles/ptCollage/palette.ini
+++ b/src/styles/ptCollage/palette.ini
@@ -8,7 +8,45 @@ Text=#D2CA9C
 Button=#4E4B61
 ButtonText=#D2CA9C
 BrightText=#ff0000
-Link=#9d9784
-Highlight=#9d9784
-Light=#5e5a74
-Dark=#413e51
+Link=#9D9784
+Highlight=#9D9784
+Light=#5E5A74
+Dark=#413E51
+
+[meter]
+Background=#1A1949
+BackgroundSoft=#1A1949
+Bar=#00F080
+BarMid=#FFFF80
+Label=#D2CA9C
+Tick=#343241
+BarHigh=#FF0000
+
+[measure]
+Playhead=#FFFFFF
+Cursor=#000000
+MeasureSeparator=#FFFFFF
+MeasureIncluded=#800000
+MeasureExcluded=#400000 
+Beat=#808080
+UnitEdit=#400070
+MeasureNumberBlock=#606060
+
+[parameters]
+Blue=#343255
+DarkBlue=#1A1949
+DarkTeal=#006060
+BrightGreen=#00F080
+FadedWhite=#FFFFFF
+Font=#FFFFFF
+Beat=#808080
+Measure=#FFFFFF
+
+[keyboard]
+Beat=#808080
+RootNote=#544C4C
+WhiteNote=#404040
+BlackNote=#202020
+WhiteLeft=#837e7880
+BlackLeft=#4e4b6180
+Black=#000000
