revise a lot of stuff

--- a/src/styles/ptCollage/palette.ini
+++ b/src/styles/ptCollage/palette.ini
@@ -22,9 +22,11 @@ Label=#D2CA9C
 Tick=#343241
 BarHigh=#FF0000
 
+[views]
+Playhead=#00F080
+Cursor=#00F080
+
 [measure]
-Playhead=#FFFFFF
-Cursor=#000000
 MeasureSeparator=#FFFFFF
 MeasureIncluded=#800000
 MeasureExcluded=#400000 
@@ -44,6 +46,7 @@ Measure=#FFFFFF
 
 [keyboard]
 Beat=#808080
+Measure=#FFFFFF
 RootNote=#544C4C
 WhiteNote=#404040
 BlackNote=#202020
