tiny colour adjustment. system style works oops

--- a/src/styles/ptCollage/palette.ini
+++ b/src/styles/ptCollage/palette.ini
@@ -15,7 +15,7 @@ Dark=#413E51
 
 [meter]
 Background=#1A1949
-BackgroundSoft=#1A1949
+BackgroundSoft=#1E1A1949
 Bar=#00F080
 BarMid=#FFFF80
 Label=#D2CA9C
@@ -50,6 +50,6 @@ Measure=#FFFFFF
 RootNote=#544C4C
 WhiteNote=#404040
 BlackNote=#202020
-WhiteLeft=#80837e78
-BlackLeft=#804e4b61
+WhiteLeft=#80837E78
+BlackLeft=#804E4B61
 Black=#000000
