--- a/res/ptcollab.desktop
+++ b/res/ptcollab.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=pxtone collab
 Comment=pxtone collab: multiplayer music editor
-Exec=ptcollab
+Exec=ptcollab %f
 Icon=ptcollab
 Categories=Audio;AudioVideo;AudioVideoEditing;
 Keywords=music;chiptune;pxtone;
