--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,6 +202,7 @@ jobs:
 
             popd
             tar -cvf- "${PACKAGE}" | gzip -9c > "${artifact_name}"
+            tar -tvf "${artifact_name}"
           else
             pushd "${PACKAGE}"
 
@@ -217,6 +218,7 @@ jobs:
 
             popd
             tar -cvf- "${PACKAGE}" | gzip -9c > "${artifact_name}"
+            tar -tvf "${artifact_name}"
           fi
 
       - name: Release
