add extra colour

--- a/src/styles/ptCollage/config.ini
+++ b/src/styles/ptCollage/config.ini
@@ -50,8 +50,9 @@ Measure=#FFFFFF
 RootNote=#544C4C
 WhiteNote=#404040
 BlackNote=#202020
-WhiteLeft=#80837E78
-BlackLeft=#804E4B61
+WhiteLeft=#837E78
+BlackLeft=#4E4B61
+BlackInnerLeft=#1A1949
 Black=#000000
 
 [fonts]
