Implement CMake install rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,10 @@ project (ptcollab
 	LANGUAGES CXX
 )
 
+include (GNUInstallDirs)
+
 #add_subdirectory (submodules)
+add_subdirectory (res)
 add_subdirectory (src)
+
+install (FILES LICENSE DESTINATION "${CMAKE_INSTALL_DOCDIR}")
