--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,18 +7,19 @@ set (CMAKE_AUTORCC ON)
 set (CMAKE_AUTOUIC ON)
 
 # Identify Qt version we're using
-message (STATUS "Attempting to identify Qt version.")
-find_package (Qt6 COMPONENTS Core)
-if (Qt6_FOUND)
-	set (QT_VERSION 6)
-else()
+#message (STATUS "Attempting to identify Qt version.")
+#find_package (Qt6 COMPONENTS Core)
+#if (Qt6_FOUND)
+#	set (QT_VERSION 6)
+#else()
 	find_package (Qt5 COMPONENTS Core)
 	if (Qt5_FOUND)
 		set (QT_VERSION 5)
 	else()
-		message (FATAL_ERROR "Unable to locate either Qt5 or Qt6!")
+#		message (FATAL_ERROR "Unable to locate either Qt5 or Qt6!")
+		message (FATAL_ERROR "Unable to locate Qt5!")
 	endif()
-endif()
+#endif()
 message(STATUS "Found Qt${QT_VERSION}")
 
 set (QT_COMPONENTS Core Gui Multimedia Widgets)
