Add vorbis submodule, wire it up to CMake
Init'd to latest release: 1.3.7, 2020-07-04

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/rtmidi"]
 	path = extern/rtmidi
 	url = https://github.com/thestk/rtmidi
+[submodule "extern/vorbis"]
+	path = extern/vorbis
+	url = https://gitlab.xiph.org/xiph/vorbis
