Add ogg submodule, wire it up to CMake
Init'd to latest release: 1.3.5, 2021-06-04

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "extern/vorbis"]
 	path = extern/vorbis
 	url = https://gitlab.xiph.org/xiph/vorbis
+[submodule "extern/ogg"]
+	path = extern/ogg
+	url = https://gitlab.xiph.org/xiph/ogg
