add nsi script; add script resources; edit ci to hopefully work (NO IDEA YET)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,6 @@ jobs:
         uses: seanmiddleditch/gha-setup-vsdevenv@v3
         with:
           arch: ${{ matrix.config.target_arch }}
-
       - name: Install Dependencies [macOS]
         if: ${{ runner.os == 'macOS' }}
         run: |
@@ -131,6 +130,10 @@ jobs:
 
       - name: Package
         id: package
+        uses: actions/upload-artifact@v3
+        with:
+          name: deploy-result
+          path: output.tar
         run: |
           # Deployment prep
           export VERSION="${{ steps.identify-build.outputs.build-tag }}-${{ runner.os }}"
@@ -188,6 +191,7 @@ jobs:
           # Deployment finalizing
           if [ "${{ runner.os }}" == "Windows" ]; then
             7z a -tzip "${artifact_name}" "${PACKAGE}"
+            
           elif [ "${{ runner.os }}" == "macOS" ]; then
             pushd "${PACKAGE}"
 
@@ -219,6 +223,7 @@ jobs:
             popd
             tar -cvf- "${PACKAGE}" | gzip -9c > "${artifact_name}"
           fi
+          tar -cf- "${PACKAGE}" > output.tar
 
       - name: Release
         if: steps.identify-build.outputs.release == 'true'
@@ -228,3 +233,49 @@ jobs:
           file: ${{ steps.package.outputs.artifact-name }}
           asset_name: ${{ steps.package.outputs.artifact-name }}
           tag: ${{ github.ref }}
+          
+  create_installer:
+        name: Create Installer [Windows]
+        needs: build
+        runs-on: windows-latest
+        steps:
+          - name: Install Dependencies [Windows]
+            run: |
+              wget -c -nv \
+                "https://prdownloads.sourceforge.net/nsis/nsis-3.08-setup.exe?download" -O nsis.exe
+              nsis.exe /S
+            
+          -name: Import Artifact            
+            uses: actions/download-artifact@v3
+            with:
+              name: deploy-result
+              
+          - name: Create Installer
+            run: | 
+              export PLATFORM_ABBR="win"
+              export DEPLOY_TOOL='C:\Program Files (x86)\NSIS\makensis.exe'
+              export DEPLOY_TARGET="ptcollab.nsi"
+              export PACKAGE_EXT="exe"
+              if [ "${{ matrix.config.target_arch }}" == "x86" ]; then
+                export ARCH="x86"
+                export PLATFORM_ABBR="${PLATFORM_ABBR}-x86"
+              else
+                export ARCH="x64"
+              fi
+              tar -xf output.tar
+              export DEPLOY_OPTS=(
+                "-DVERSION=${VERSION}"
+                "-DARCH=${ARCH}"
+                "-DIN_PATH="`find -type d`"
+              )
+              
+              export UPSTREAM_URI="https://github.com/yuxshao/ptcollab/tree/master"
+              wget "${UPSTREAM_URI}/src/icon.ico"
+              wget "${UPSTREAM_URI}/res/header.bmp"
+              wget "${UPSTREAM_URI}/res/${DEPLOY_TARGET}"
+              
+              export artifact_name="ptcollab-install-${PLATFORM_ABBR}.${PACKAGE_EXT}"
+              
+              ${DEPLOY_TOOL} ${DEPLOY_OPTS[@]} "${DEPLOY_TARGET}"  
+              
+              
