i forgot to rename it

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -255,7 +255,7 @@ jobs:
           
       - name: Install NSIS
         shell: bash
-        run: powershell -Command "./nsis-3.08-setup.exe /S"
+        run: powershell -Command "./nsis-install.exe /S"
           
       - name: Import Artifact            
         uses: actions/download-artifact@v3
